--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>FIUBA Racing</title>
+  <title>FRBA Racing</title>
 </head>
 <body class="bg-black text-white">
 
 <header class="fixed w-full bg-slate-900/90 backdrop-blur z-50">
   <nav class="max-w-7xl mx-auto flex items-center justify-between p-4">
-    <span class="font-bold">FIUBA Racing</span>
+    <span class="font-bold">FRBA Racing</span>
     <div class="space-x-6 hidden md:block">
       <a href="index.html">Inicio</a>
       <a href="electronica.html">Electrónica</a>
