--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- Background image -->
       <div class="absolute inset-0">
         <img
-          src="assets/img/formula_img.jpeg"
+          src="assets/img/formula_img.jpg"
           alt="UTN FRBA Formula SAE"
           class="h-full w-full object-cover"
         />
