--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
           </h1>
 
           <p class="mt-5 text-lg text-white/80">
-            Arrancamos el equipo este año y lo abrimos al público. Nuestro objetivo es diseñar un auto rápido y competitivo,
-            y también poder presentarlo y defenderlo como proyecto de ingeniería.
+            Somos un equipo interdisciplinario de estudiantes de ingeniería que trabaja en el diseño, desarrollo y validación de un monoplaza eléctrico, integrando distintas áreas técnicas en un mismo proyecto.
           </p>
 
           <div class="mt-8 flex flex-col gap-3 sm:flex-row">
