--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
 
       <div class="relative mx-auto max-w-7xl px-4 py-16">
         <div class="max-w-3xl">
-          <div class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-black/40 px-3 py-1 text-xs text-white/80">
-            <span class="h-2 w-2 rounded-full bg-utnred"></span>
-            Equipo iniciado en 2025 · UTN FRBA
-          </div>
+          
 
           <h1 class="mt-6 text-4xl font-extrabold tracking-tight sm:text-5xl">
             Construimos un <span class="text-utnred">Fórmula SAE eléctrico</span>
@@ -100,11 +97,7 @@
             </div>
             <div class="rounded-lg border border-white/10 bg-black/30 p-4">
               <div class="text-xs text-white/60">Categoría</div>
-              <div class="mt-1 font-semibold">Auto eléctrico</div>
-            </div>
-            <div class="rounded-lg border border-white/10 bg-black/30 p-4">
-              <div class="text-xs text-white/60">Enfoque</div>
-              <div class="mt-1 font-semibold">Rendimiento + defensa del proyecto</div>
+              <div class="mt-1 font-semibold">Fórmula SAE Eléctrica</div>
             </div>
           </div>
         </div>
